--- a/jsf-webapp/src/main/resources/com/example/webapp/i18n/messages_cn.utf8.properties
+++ b/jsf-webapp/src/main/resources/com/example/webapp/i18n/messages_cn.utf8.properties
@@ -3,25 +3,24 @@ javax.faces.component.UIInput.REQUIRED={0}: Value is required - custom message.
 javax.faces.validator.LongRangeValidator.NOT_IN_RANGE={2}: Specified attribute is not between the expected values of {0} and {1} - custom message.
 javax.faces.validator.LengthValidator.MAXIMUM={1}: Value is greater than allowable maximum of ''{0}''- custom message
 javax.faces.validator.LengthValidator.MINIMUM={1}: Value is less than allowable minimum of ''{0}''- custom message
-# Session
-session.expired=Your session timed out!
 # General
-general.cancel=Cancel
-general.save=Save
-general.edit=Edit
-general.delete=Delete
-general.detail=Detail
-
-general.day=Day
-general.month=Month
-general.year=Year
+session.expired=您的會話超時！
+# General
+general.cancel=取消
+general.save=救
+general.edit=編輯
+general.delete=刪除
+general.detail=詳情
+general.day=日
+general.month=月
+general.year=年
 # Customer text
-customers=Customers
-customers.create.new=Create new customer
-customers.index=Index
-customers.title=Title
-customers.firstname=First name
-customers.lastname=Last name
-customers.email=Email
-customers.birthday=Birthday
-customers.action=Action
+customers=顧客
+customers.create.new=建立新客戶
+customers.index=指數
+customers.title=標題
+customers.firstname=名字
+customers.lastname=姓
+customers.email=電子郵件
+customers.birthday=生日
+customers.action=行動
