--- a/jsf-webapp/src/main/resources/com/example/webapp/i18n/messages_de.properties
+++ b/jsf-webapp/src/main/resources/com/example/webapp/i18n/messages_de.properties
@@ -1,7 +1,21 @@
+# Standard text
 javax.faces.component.UIInput.REQUIRED={0}: Value is required - custom message.
 javax.faces.validator.LongRangeValidator.NOT_IN_RANGE={2}: Specified attribute is not between the expected values of {0} and {1} - custom message.
 javax.faces.validator.LengthValidator.MAXIMUM={1}: Value is greater than allowable maximum of ''{0}''- custom message
 javax.faces.validator.LengthValidator.MINIMUM={1}: Value is less than allowable minimum of ''{0}''- custom message
+# Session
+session.expired=Ihre Sitzung ist leider abgelaufen!
+# General
+general.cancel=Abbrechen
+general.save=Speichern
+general.edit=Edit
+general.delete=Delete
+general.detail=Detail
+
+general.day=Tag
+general.month=Monat
+general.year=Jahr
+# Customer text
 customers=Kunden
 customers.create.new=Neukunde anlegen
 customers.index=Index
